# OWenT-s-Utils

./: CNAME  README.md  index.html  params.json
Bash&Shell/GCC Installer/gcc-4.8/: README.md  installer.sh
Bash&Shell/GCC Installer/gcc-4.9/: README.md  installer.sh
Bash&Shell/LNMP/: README.md  lnmp.sh
Bash&Shell/Others/: common.sh  remove_bom.py
C&CPP/: CMakeLists.txt  CompilerOption.cmake  README.md  TargetOption.cmake
C&CPP/DataStructure/: StaticIdxList.h
C&CPP/Logic/: AttributeManager.h
C&CPP/Socket/: CompatSocket.cpp  CompatSocket.h
C&CPP/String/: TQueryString.cpp  TQueryString.h
C&CPP/include/Algorithm/: Hash.h
C&CPP/include/Config/: INILoader.h
C&CPP/include/DataStructure/: DynamicIdxList.h  IdxListBase.h  StaticIdxList.h
C&CPP/include/Lock/: SpinLock.h
C&CPP/include/Logic/: AttributeManager.h  AttributeManager.h.php
C&CPP/include/MemPool/: IdxMemType.h  IdxMemTypeKV.h  STDAllocatorBase.h  StaticAllocator.h
C&CPP/include/Random/: RandomGenerator.h  RandomMTCore.h  RandomXorCombineCore.h  UUIDGenerator.h
C&CPP/include/Socket/: CompatSocket.h
C&CPP/include/String/: TQueryString.h
C&CPP/include/std/: array.h  explicit_declare.h  foreach.h  functional.h  ref.h  smart_ptr.h  static_assert.h  thread.h  tuple.h  utility.h
C&CPP/project/cmake/: CompilerOption.cmake
C&CPP/sample/: Sample.cpp
C&CPP/src/Config/: INILoader.cpp
C&CPP/src/Logic/: AttributeManager.h.php
C&CPP/src/Socket/: CompatSocket.cpp
C&CPP/src/String/: TQueryString.cpp
C&CPP/std/: README.md  functional.h
C&CPP/test/: CMakeLists.txt
C&CPP/test/src/: AttributeManagerTest.cpp  DynamicIdxListTest.cpp  ForeachTest.cpp  RandomTest.cpp  StaticIdxListTest.cpp
DotNet/MusicPlayer/: App.xaml  App.xaml.cs  Player.csproj
DotNet/MusicPlayer/Properties/: AssemblyInfo.cs
MusicPlayer/: MainPage.xaml  MainPage.xaml.cs
Other/CMake/Modules/: EchoWithColor.cmake  IncludeDirectoryRecurse.cmake
Other/CMake/Template/: CompilerOption.cmake  TargetOption.cmake
Other/Gnome/: README.md
Other/Vim/: .vimrc
Other/Vim/.vim/: plugin_list
Other/Vim/.vim/after/: custom.vim  vimrc.vim
Other/Vim/.vim/after/plugin/: custom.vim  vimrc.vim
Script/Bash&Shell/GCC Installer/gcc-4.7/: README.md
Script/Bash&Shell/GCC Installer/gcc-4.8/: README.md
Script/Bash&Shell/GCC Installer/gcc-4.9/: README.md
Script/Bash&Shell/LLVM&Clang Installer/3.5/: README.md  installer.sh
Script/Bash&Shell/LNMP/: README.md  lnmp_for_el7.sh
Script/Lua/algorithm/: union_set.lua
Web/js/: README.md  TQueryString.js  jquery.browser.js  jquery.browser.ts  showJson.js
demos/MusicPlayer/: index.html
demos/OverCraft/: index.html  readme.txt  sl3.html  sl4.html
demos/checkbrowser/: index.html
demos/collection/heart/h1/: h1.htm
demos/collection/heart/h2/: h2.htm
demos/hw/: canvas12.html  canvas34.html  to_glf.html
demos/sgame/: sgame.html
demos/sgame/sgame/: sgame.js
demos/sharpchess/: chess.js  index.html  sharpgamestyle.css
release/OverCraft/SL3/: OverCraft.xap
release/OverCraft/SL4/: OverCraft.xap
release/OverCraft/WP7/: OverCraft.xap
resource/doc/link/: zerqmq 性能测试报告.xlsx
resource/js/: jquery.browser.js  jquery.browser.js.map
